// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lock-file mapLockFileDataToExternalNodes should map npm lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "dependencies": Object {
      "cliui": Array [
        "^7.0.2",
        "7.0.4",
      ],
      "escalade": Array [
        "^3.1.1",
        "3.1.1",
      ],
      "get-caller-file": Array [
        "^2.0.5",
        "2.0.5",
      ],
      "require-directory": Array [
        "^2.1.1",
        "2.1.1",
      ],
      "string-width": Array [
        "^4.2.3",
        "4.2.3",
      ],
      "y18n": Array [
        "^5.0.5",
        "5.0.8",
      ],
      "yargs-parser": Array [
        "^21.0.0",
        "21.0.1",
      ],
    },
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map pnpm lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "dependencies": Object {
      "cliui": Array [
        "7.0.4",
        "7.0.4",
      ],
      "escalade": Array [
        "3.1.1",
        "3.1.1",
      ],
      "get-caller-file": Array [
        "2.0.5",
        "2.0.5",
      ],
      "require-directory": Array [
        "2.1.1",
        "2.1.1",
      ],
      "string-width": Array [
        "4.2.3",
        "4.2.3",
      ],
      "y18n": Array [
        "5.0.8",
        "5.0.8",
      ],
      "yargs-parser": Array [
        "21.1.1",
        "21.1.1",
      ],
    },
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;

exports[`lock-file mapLockFileDataToExternalNodes should map yarn lock file data to external nodes 1`] = `
Object {
  "data": Object {
    "dependencies": Object {
      "cliui": Array [
        "^7.0.2",
        "7.0.4",
      ],
      "escalade": Array [
        "^3.1.1",
        "3.1.1",
      ],
      "get-caller-file": Array [
        "^2.0.5",
        "2.0.5",
      ],
      "require-directory": Array [
        "^2.1.1",
        "2.1.1",
      ],
      "string-width": Array [
        "^4.2.3",
        "4.2.3",
      ],
      "y18n": Array [
        "^5.0.5",
        "5.0.8",
      ],
      "yargs-parser": Array [
        "^21.0.0",
        "21.1.1",
      ],
    },
    "packageName": "yargs",
    "version": "17.5.1",
  },
  "name": "npm:yargs",
  "type": "npm",
}
`;
